compiler/testData/diagnostics/tests/ambiguousLabelInExtensionFunctionWithOuterClass.kt
// FIR_IDENTICAL

class Dup {
    fun String.Dup() : Unit {
        this<!AMBIGUOUS_LABEL!>@Dup<!>
    }
}

